--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
   <div class="container">
     <header class="header">
       <h1 class="fund-title">Omniverse Fund</h1>
-      <p class="subtitle">Quantitative Crypto Fund for the Attention Age</p>
+      <p class="subtitle">Quantitative Digital Assets Fund for the Attention Age</p>
       <p class="mono" style="color: var(--text-secondary); margin-top: 1rem;">
         Private • Multi-Strategy • High-Frequency
       </p>
