--- a/index.html
+++ b/index.html
@@ -273,16 +273,16 @@
   <div class="container">
     <header class="header">
       <h1 class="fund-title">Omniverse Fund</h1>
-      <p class="subtitle">Quantitative Digital Assets Fund for the Attention Age</p>
+      <p class="subtitle">Quantitative Crypto Fund for the Attention Age</p>
       <p class="mono" style="color: var(--text-secondary); margin-top: 1rem;">
         Private • Multi-Strategy • High-Frequency
       </p>
     </header>
 
-    <!-- Loom Video Embed -->
+    <!-- YouTube Video Embed -->
     <div class="responsive-video-wrapper">
       <iframe
-        src="https://www.loom.com/embed/71b85bb4278f4011a407862173f1add9?sid=705c242a-825b-40a5-9ef5-aa882e7160d9"
+        src="https://www.youtube.com/embed/dJSzTs8D9GU?autoplay=1&mute=1&rel=0&modestbranding=1"
         allowfullscreen
         webkitallowfullscreen
         mozallowfullscreen>
