--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
       <p style="margin-bottom: 2rem; font-size: 1.1rem;">
         We are the algorithmic evolution of retail narrative cycles — faster, leaner, and positioned where institutions cannot go.
       </p>
-      <a href="https://bit.ly/ompaper" class="cta-button">White Paper</a>
+      <a href="https://abalone-bladder-67d.notion.site/Whitepaper-23d536e9d0f080bfbc84fce94601ed05?source=copy_link" class="cta-button">White Paper</a>
       <a href="https://meet.brevo.com/tigris/fund" class="cta-button cta-primary">Book a Call</a>
       <a href="https://x.com/omniversefund" class="cta-button">X</a>
     </div>
