--- a/index.html
+++ b/index.html
@@ -273,21 +273,22 @@
   <div class="container">
     <header class="header">
       <h1 class="fund-title">Omniverse Fund</h1>
-      <p class="subtitle">Quantitative Digital Assets Fund for the Attention Age</p>
+      <p class="subtitle">Digital Assets Fund for the Attention Age</p>
       <p class="mono" style="color: var(--text-secondary); margin-top: 1rem;">
         Private • Multi-Strategy • High-Frequency
       </p>
     </header>
 
-    <!-- YouTube Video Embed -->
-    <div class="responsive-video-wrapper">
-      <iframe
-        src="https://www.youtube.com/embed/dJSzTs8D9GU?autoplay=1&mute=1&rel=0&modestbranding=1"
-        allowfullscreen
-        webkitallowfullscreen
-        mozallowfullscreen>
-      </iframe>
-    </div>
+   <!-- YouTube Video Embed -->
+<div class="responsive-video-wrapper">
+  <iframe
+    src="https://www.youtube.com/embed/sF76UUvZhcI?autoplay=1&mute=1&rel=0&modestbranding=1"
+    allowfullscreen
+    webkitallowfullscreen
+    mozallowfullscreen>
+  </iframe>
+</div>
+
 
     <section class="section">
       <h2 class="section-title">Investment Thesis</h2>
