adding pyament button

--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
       <p style="margin-bottom: 2rem; font-size: 1.1rem;">
         We are the algorithmic evolution of retail narrative cycles — faster, leaner, and positioned where institutions cannot go.
       </p>
-      <a href="https://abalone-bladder-67d.notion.site/Whitepaper-23d536e9d0f080bfbc84fce94601ed05?source=copy_link" class="cta-button">White Paper</a>
-      <a href="https://meet.brevo.com/tigris/fund" class="cta-button cta-primary">Book a Call</a>
-      <a href="https://x.com/omniversefund" class="cta-button">X</a>
+      <a href="https://abalone-bladder-67d.notion.site/Whitepaper-23d536e9d0f080bfbc84fce94601ed05?source=copy_link" class="cta-button" target="_blank">White Paper</a>
+      <a href="https://meet.brevo.com/tigris/fund" class="cta-button cta-primary" target="_blank">Book a Call</a>
+      <a href="https://app.hel.io/pay/688a2c7129aa18badafe7c2a" class="cta-button" target="_blank">Subscribe (LP)</a>
     </div>
   </div>
 
